# CarDetector

./: .gitignore  CMakeLists.txt  Detector.cpp  Detector.h  DisjointSet.cpp  DisjointSet.h  OPF.cpp  OPF.h  README.md  SampleDescriptor.h  main.cpp  train.cpp
